test/library/standard/Reflection/error-in-fn-canResolve5.good
error-in-fn-canResolve5.chpl:3: In function 'f':
error-in-fn-canResolve5.chpl:4: error: I am an error
error-in-fn-canResolve5.chpl:25: note: in function called here
